final(ui): stabilize incident workspace layout and clean left column panels

--- a/ui/index.html
+++ b/ui/index.html
@@ -1,4 +1,3 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -15,36 +14,34 @@
 
 <main class="layout">
 
-  <!-- LEFT: INCIDENT CONTEXT -->
+  <!-- LEFT COLUMN -->
   <section class="left-column">
 
-  <!-- TOP: INCIDENT CONTEXT -->
-  <div class="panel">
-    <h2>Incident Context</h2>
-    <div class="context-grid">
-      <div><strong>Case ID:</strong> INC-2026-001</div>
-      <div><strong>Status:</strong> Open</div>
-      <div><strong>Phase:</strong> Analysis</div>
-      <div><strong>Location:</strong> Vienna</div>
-      <div><strong>Severity:</strong> High</div>
-      <div><strong>Owner:</strong> Team A</div>
+    <div class="panel context-panel">
+      <h2>Incident Context</h2>
+      <div class="context-grid">
+        <div><strong>Case ID:</strong> INC-2026-001</div>
+        <div><strong>Status:</strong> Open</div>
+        <div><strong>Phase:</strong> Analysis</div>
+        <div><strong>Location:</strong> Vienna</div>
+        <div><strong>Severity:</strong> High</div>
+        <div><strong>Owner:</strong> Team A</div>
+      </div>
     </div>
-  </div>
 
-  <!-- BOTTOM: EVIDENCE & ACTION -->
-  <div class="panel">
-    <h2>Evidence</h2>
-    <ul>
-      <li>incident_photo_01.jpg</li>
-      <li>inspection_report.pdf</li>
-    </ul>
+    <div class="panel evidence-panel">
+      <h2>Evidence</h2>
+      <ul>
+        <li>incident_photo_01.jpg</li>
+        <li>inspection_report.pdf</li>
+      </ul>
 
-    <button class="primary">Run AI Analysis</button>
-  </div>
+      <button class="primary">Run AI Analysis</button>
+    </div>
 
-</section>
+  </section>
 
-  <!-- RIGHT: PHASES + AI -->
+  <!-- RIGHT COLUMN -->
   <section class="right-column">
 
     <div class="phases">
