fix(ui): move evidence into incident context and align Run AI with AI insights

--- a/ui/index.html
+++ b/ui/index.html
@@ -29,6 +29,7 @@
         <div><strong>Owner:</strong> Team A</div>
       </div>
 
+      <!-- EVIDENCE BELONGS HERE -->
       <h3 class="subheading">Evidence</h3>
       <ul class="evidence-list">
         <li>incident_photo_01.jpg</li>
@@ -76,13 +77,13 @@
 
     </div>
 
-    <!-- ACTION + AI INSIGHTS ROW -->
+    <!-- RUN AI + AI INSIGHTS (SAME ROW, SAME HEIGHT CONTEXT) -->
     <div class="bottom-row">
 
       <div class="panel run-ai-panel">
         <h3>Run Analysis</h3>
         <p>
-          Trigger AI-assisted reasoning based on the current incident data,
+          Trigger AI-assisted reasoning based on the current incident,
           evidence, and phase inputs.
         </p>
         <button class="primary">Run AI Analysis</button>
