fix(ui): restore functional evidence upload buttons in incident context

--- a/ui/index.html
+++ b/ui/index.html
@@ -22,38 +22,43 @@
 
     <!-- INCIDENT CONTEXT (LEFT) -->
     <div class="panel incident-context">
-      <h2>Incident Context</h2>
+  <h2>Incident Context</h2>
 
-      <div class="context-grid">
-        <div><strong>Case ID:</strong> INC-2026-001</div>
-        <div><strong>Status:</strong> Open</div>
-        <div><strong>Phase:</strong> Analysis</div>
-        <div><strong>Location:</strong> Vienna</div>
-        <div><strong>Severity:</strong> High</div>
-        <div><strong>Owner:</strong> Team A</div>
-      </div>
+  <div class="context-grid">
+    <div><strong>Case ID:</strong> INC-2026-001</div>
+    <div><strong>Status:</strong> Open</div>
+    <div><strong>Phase:</strong> Analysis</div>
+    <div><strong>Location:</strong> Vienna</div>
+    <div><strong>Severity:</strong> High</div>
+    <div><strong>Owner:</strong> Team A</div>
+  </div>
 
-      <h3 class="subheading">Evidence</h3>
-      <ul class="evidence-list">
-        <li>incident_photo_01.jpg</li>
-        <li>inspection_report.pdf</li>
-      </ul>
+  <h3 class="subheading">Evidence</h3>
+  <ul class="evidence-list">
+    <li>incident_photo_01.jpg</li>
+    <li>inspection_report.pdf</li>
+  </ul>
 
-<div class="upload-actions">
+  <!-- ✅ WORKING UPLOAD BUTTONS -->
+  <div class="upload-actions">
 
-  <!-- Upload Photo -->
-  <label class="secondary file-button">
-    Upload Photo
-    <input type="file" accept="image/*" hidden>
-  </label>
+    <label class="secondary file-button">
+      Upload Photo
+      <input type="file" accept="image/*">
+    </label>
 
-  <!-- Upload Document -->
-  <label class="secondary file-button">
-    Upload Document
-    <input type="file" accept=".pdf,.doc,.docx,.xls,.xlsx" hidden>
-  </label>
+    <label class="secondary file-button">
+      Upload Document
+      <input type="file" accept=".pdf,.doc,.docx,.xls,.xlsx">
+    </label>
 
+  </div>
 </div>
+
+
+
+
+
 
 
     <!-- D1–D8 MAIN WORK AREA (RIGHT) -->
