Add merged D1–D2 problem initiation section

--- a/ui/index.html
+++ b/ui/index.html
@@ -66,11 +66,51 @@
       <h2>D1–D8</h2>
 
       <div class="phases-scroll">
+        <div class="phase d1 d12">
+  <h3>Problem Initiation (D1–D2)</h3>
+  
+  <label>Problem Description</label>
+  <textarea placeholder="Describe the problem factually (what, where, when, impact)..."></textarea>
+  
+  <div class="form-grid">
+    <div>
+      <label>Case Number</label>
+      <input type="text" placeholder="Enter case number (e.g. INC-2026-001)">
+  
+    </div>
+  
+    <div>
+      <label>Opening Date</label>
+      <input type="date" value="2026-01-14" readonly>
+    </div>
+  
+    <div>
+      <label>Closure Date</label>
+      <input type="date" disabled>
+    </div>
+  
+    <div>
+      <label>Team Members</label>
+      <input type="text" placeholder="Owner, contributors">
+    </div>
+  
+    <div>
+      <label>Country</label>
+      <input type="text" placeholder="e.g. Austria">
+    </div>
+  
+    <div>
+      <label>Site / Plant</label>
+      <input type="text" placeholder="e.g. Vienna">
+    </div>
+  
+    <div>
+      <label>Department</label>
+      <input type="text" placeholder="e.g. Production">
+    </div>
+  </div>
+  </div>
 
-        <div class="phase d1">
-          <h3>D1 – Problem Definition</h3>
-          <textarea placeholder="Describe the problem, impact, and scope..."></textarea>
-        </div>
 
         <div class="phase d2">
           <h3>D2 – Containment</h3>
