Improve D1–D2 layout: two-column fields and expanded team members

--- a/ui/index.html
+++ b/ui/index.html
@@ -89,10 +89,10 @@
       <input type="date" disabled>
     </div>
   
-    <div>
-      <label>Team Members</label>
-      <input type="text" placeholder="Owner, contributors">
-    </div>
+    <div class="full-width">
+       <label>Team Members</label>
+        <textarea placeholder="Owner, contributors, functions involved"></textarea>
+     </div>
   
     <div>
       <label>Country</label>
