Widen D1–D2 section and simplify problem description placeholder

--- a/ui/index.html
+++ b/ui/index.html
@@ -70,7 +70,7 @@
   <h3>Problem Initiation (D1–D2)</h3>
   
   <label>Problem Description</label>
-  <textarea placeholder="Describe the problem factually (what, where, when, impact)..."></textarea>
+  <textarea placeholder="Describe the problem ..."></textarea>
   
   <div class="form-grid">
     <div>
