Fix D1–D2 form-grid structure for team members and organization fields

--- a/ui/index.html
+++ b/ui/index.html
@@ -113,14 +113,41 @@
     </div>
   
     <div class="full-width">
-       <label>Team Members</label>
-        <textarea
-          name="phases.D1_D2.data.team_members"
-          id="team_members"
-          placeholder="One person per line (name – role)">
-        </textarea>
+  <label for="team_members">Team Members</label>
+  <textarea
+    name="phases.D1_D2.data.team_members"
+    id="team_members"
+    placeholder="One person per line (name – role)">
+  </textarea>
+</div>
 
-     </div>
+<div>
+  <label for="country">Country</label>
+  <input
+    id="country"
+    type="text"
+    name="phases.D1_D2.data.organization.country"
+    placeholder="e.g. Austria">
+</div>
+
+<div>
+  <label for="site">Site / Plant</label>
+  <input
+    id="site"
+    type="text"
+    name="phases.D1_D2.data.organization.site"
+    placeholder="e.g. Vienna Plant 1">
+</div>
+
+<div>
+  <label for="department">Department</label>
+  <input
+    id="department"
+    type="text"
+    name="phases.D1_D2.data.organization.department"
+    placeholder="e.g. Production">
+</div>
+
   
     <div>
       <label>Country</label>
