--- a/ui/index.html
+++ b/ui/index.html
@@ -68,118 +68,72 @@
       <div class="phases-scroll">
         <div class="phase d1 d12">
   <h3>Problem Initiation (D1–D2)</h3>
-  
-  <label>Problem Description</label>
+
+  <label for="problem_description">Problem Description</label>
   <textarea
-  name="phases.D1_D2.data.problem_description"
-  id="problem_description"
-  placeholder="Describe the problem.">
+    id="problem_description"
+    name="phases.D1_D2.data.problem_description"
+    placeholder="Describe what happened (WHAT). Do not analyze causes here.">
   </textarea>
 
-  
+  <!-- 🔑 THIS WRAPPER IS MANDATORY -->
   <div class="form-grid">
+
     <div>
-      <label>Case Number</label>
-
-      <input
-        type="text"
-        name="case.case_number"
-        id="case_number"
-        placeholder="Enter case number (e.g. INC-2026-001)">
-
-  
+      <label for="case_number">Case Number</label>
+      <input id="case_number" type="text" name="case.case_number">
     </div>
-  
+
     <div>
-      <label>Opening Date</label>
-    
-      <input
-         type="date"
-         name="case.opening_date"
-         id="opening_date"
-         readonly>
-
+      <label for="opening_date">Opening Date</label>
+      <input id="opening_date" type="date" name="case.opening_date" readonly>
     </div>
-  
+
     <div>
-      <label>Closure Date</label>
-      
-      <input
-        type="date"
-        name="case.closure_date"
-        id="closure_date"
-        disabled>
-
+      <label for="closure_date">Closure Date</label>
+      <input id="closure_date" type="date" name="case.closure_date" disabled>
     </div>
-  
+
+    <!-- ✅ TEAM MEMBERS (FULL WIDTH) -->
     <div class="full-width">
-  <label for="team_members">Team Members</label>
-  <textarea
-    name="phases.D1_D2.data.team_members"
-    id="team_members"
-    placeholder="One person per line (name – role)">
-  </textarea>
-</div>
-
-<div>
-  <label for="country">Country</label>
-  <input
-    id="country"
-    type="text"
-    name="phases.D1_D2.data.organization.country"
-    placeholder="e.g. Austria">
-</div>
-
-<div>
-  <label for="site">Site / Plant</label>
-  <input
-    id="site"
-    type="text"
-    name="phases.D1_D2.data.organization.site"
-    placeholder="e.g. Vienna Plant 1">
-</div>
-
-<div>
-  <label for="department">Department</label>
-  <input
-    id="department"
-    type="text"
-    name="phases.D1_D2.data.organization.department"
-    placeholder="e.g. Production">
-</div>
-
-  
-    <div>
-      <label>Country</label>
-      <input
-         type="text"
-         name="phases.D1_D2.data.organization.country"
-         id="country"
-         placeholder="e.g. Austria">
-
+      <label for="team_members">Team Members</label>
+      <textarea
+        id="team_members"
+        name="phases.D1_D2.data.team_members"
+        placeholder="One person per line: Name – Role – Department">
+      </textarea>
     </div>
-  
+
+    <!-- ✅ THESE MUST BE HERE -->
     <div>
-      <label>Site / Plant</label>
+      <label for="country">Country</label>
       <input
+        id="country"
+        type="text"
+        name="phases.D1_D2.data.organization.country"
+        placeholder="e.g. Austria">>
+    </div>
+
+    <div>
+      <label for="site">Site / Plant</label>
+      <input
+        id="site"
         type="text"
         name="phases.D1_D2.data.organization.site"
-        id="site"
-        placeholder="e.g. Vienna">
-
+        placeholder="e.g. Vienna – Plant 1">
     </div>
-  
+
     <div>
-      <label>Department</label>
+      <label for="department">Department</label>
       <input
+        id="department"
         type="text"
         name="phases.D1_D2.data.organization.department"
-        id="department"
-        placeholder="e.g. Production">
-
+        placeholder="e.g. Production / Quality">
     </div>
+
   </div>
-  </div>
+</div>
 
         <div class="phase d3">
           <h3>D3 – Analysis</h3>
@@ -193,7 +147,7 @@
         <div class="phase d4">
           <h3>D4 – Corrective Actions</h3>
           <textarea
-            name="phases.D6.data.notes"
+            name="phases.D4.data.notes"
             placeholder="Corrective actions, owners, due dates...">
           </textarea>
 
