--- a/ui/index.html
+++ b/ui/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -10,188 +11,172 @@
 
 <body>
 
-<header class="topbar">
-  <h1>AI-Assisted Decision Support</h1>
-  <p>Collaborative Intelligence Workspace</p>
-</header>
+  <header class="topbar">
+    <h1>AI-Assisted Decision Support</h1>
+    <p>Collaborative Intelligence Workspace</p>
+  </header>
 
-<main class="workspace">
+  <main class="workspace">
 
-  <!-- ROW 1 -->
-  <section class="row top-row">
+    <!-- ROW 1 -->
+    <section class="row top-row">
 
-    <!-- INCIDENT CONTEXT (LEFT) -->
-    <div class="panel incident-context">
-  <h2>Incident Context</h2>
+      <!-- INCIDENT CONTEXT (LEFT) -->
+      <div class="panel incident-context">
+        <h2>Incident Context</h2>
 
-  <div class="context-grid">
-    <div><strong>Case ID:</strong> INC-2026-001</div>
-    <div><strong>Status:</strong> Open</div>
-    <div><strong>Phase:</strong> Analysis</div>
-    <div><strong>Location:</strong> Vienna</div>
-    <div><strong>Severity:</strong> High</div>
-    <div><strong>Owner:</strong> Team A</div>
-  </div>
+        <div class="context-grid">
+          <div><strong>Case ID:</strong> INC-2026-001</div>
+          <div><strong>Status:</strong> Open</div>
+          <div><strong>Phase:</strong> Analysis</div>
+          <div><strong>Location:</strong> Vienna</div>
+          <div><strong>Severity:</strong> High</div>
+          <div><strong>Owner:</strong> Team A</div>
+        </div>
 
-  <h3 class="subheading">Evidence</h3>
-  <ul class="evidence-list">
-    <li>incident_photo_01.jpg</li>
-    <li>inspection_report.pdf</li>
-  </ul>
+        <h3 class="subheading">Evidence</h3>
+        <ul class="evidence-list">
+          <li>incident_photo_01.jpg</li>
+          <li>inspection_report.pdf</li>
+        </ul>
 
-  <!-- ✅ WORKING UPLOAD BUTTONS -->
-  <div class="upload-actions">
+        <!-- ✅ WORKING UPLOAD BUTTONS -->
+        <div class="upload-actions">
 
-    <label class="secondary file-button">
-      Upload Photo
-      <input type="file" accept="image/*">
-    </label>
+          <label class="secondary file-button">
+            Upload Photo
+            <input type="file" accept="image/*">
+          </label>
 
-    <label class="secondary file-button">
-      Upload Document
-      <input type="file" accept=".pdf,.doc,.docx,.xls,.xlsx">
-    </label>
+          <label class="secondary file-button">
+            Upload Document
+            <input type="file" accept=".pdf,.doc,.docx,.xls,.xlsx">
+          </label>
 
-  </div>
-</div>
-
-
+        </div>
+      </div>
 
 
 
 
 
-    <!-- D1–D8 MAIN WORK AREA (RIGHT) -->
-    <div class="panel phases-container">
-      <h2>D1–D8</h2>
 
-      <div class="phases-scroll">
-        <div class="phase d1 d12">
-  <h3>Problem Initiation (D1–D2)</h3>
 
-  <label for="problem_description">Problem Description</label>
-  <textarea
-    id="problem_description"
-    name="phases.D1_D2.data.problem_description"
-    placeholder="Describe what happened (WHAT). Do not analyze causes here.">
+      <!-- D1–D8 MAIN WORK AREA (RIGHT) -->
+      <div class="panel phases-container">
+        <h2>D1–D8</h2>
+
+        <div class="phases-scroll">
+          <div class="phase d1 d12">
+            <h3>Problem Initiation (D1–D2)</h3>
+
+            <label for="problem_description">Problem Description</label>
+            <textarea id="problem_description" name="phases.D1_D2.data.problem_description"
+              placeholder="Describe what happened (WHAT). Do not analyze causes here.">
   </textarea>
 
-  <!-- 🔑 THIS WRAPPER IS MANDATORY -->
-  <div class="form-grid">
+            <!-- 🔑 THIS WRAPPER IS MANDATORY -->
+            <div class="form-grid">
+              <!-- 🌍 CONTEXT FIRST -->
+              <div>
+                <label for="country">Country</label>
+                <input id="country" type="text" name="phases.D1_D2.data.organization.country"
+                  placeholder="e.g. Austria">
+              </div>
 
-    <div>
-      <label for="case_number">Case Number</label>
-      <input id="case_number" type="text" name="case.case_number">
-    </div>
+              <div>
+                <label for="site">Site / Plant</label>
+                <input id="site" type="text" name="phases.D1_D2.data.organization.site"
+                  placeholder="e.g. Vienna – Plant 1">
+              </div>
 
-    <div>
-      <label for="opening_date">Opening Date</label>
-      <input id="opening_date" type="date" name="case.opening_date" readonly>
-    </div>
+              <div class="full-width">
+                <label for="department">Department</label>
+                <input id="department" type="text" name="phases.D1_D2.data.organization.department"
+                  placeholder="e.g. Production / Quality">
+              </div>
 
-    <div>
-      <label for="closure_date">Closure Date</label>
-      <input id="closure_date" type="date" name="case.closure_date" disabled>
-    </div>
+              <!-- 👥 TEAM -->
+              <div class="full-width">
+                <label for="team_members">Team Members</label>
+                <textarea id="team_members" name="phases.D1_D2.data.team_members"
+                  placeholder="One person per line: Name – Role – Function">
+  </textarea>
+              </div>
 
-    <!-- ✅ TEAM MEMBERS (FULL WIDTH) -->
-    <div class="full-width">
-      <label for="team_members">Team Members</label>
-      <textarea
-        id="team_members"
-        name="phases.D1_D2.data.team_members"
-        placeholder="One person per line: Name – Role – Department">
-      </textarea>
-    </div>
+              <!-- 📋 ADMIN / TRACKING -->
+              <div>
+                <label for="case_number">Case Number</label>
+                <input id="case_number" type="text" name="case.case_number" placeholder="e.g. INC-2026-001">
+              </div>
 
-    <!-- ✅ THESE MUST BE HERE -->
-    <div>
-      <label for="country">Country</label>
-      <input
-        id="country"
-        type="text"
-        name="phases.D1_D2.data.organization.country"
-        placeholder="e.g. Austria">>
-    </div>
+              <div>
+                <label for="opening_date">Opening Date</label>
+                <input id="opening_date" type="date" name="case.opening_date" readonly>
+              </div>
 
-    <div>
-      <label for="site">Site / Plant</label>
-      <input
-        id="site"
-        type="text"
-        name="phases.D1_D2.data.organization.site"
-        placeholder="e.g. Vienna – Plant 1">
-    </div>
+              <div>
+                <label for="closure_date">Closure Date</label>
+                <input id="closure_date" type="date" name="case.closure_date" disabled>
+              </div>
 
-    <div>
-      <label for="department">Department</label>
-      <input
-        id="department"
-        type="text"
-        name="phases.D1_D2.data.organization.department"
-        placeholder="e.g. Production / Quality">
-    </div>
 
-  </div>
-</div>
 
-        <div class="phase d3">
-          <h3>D3 – Analysis</h3>
-          <textarea
-            name="phases.D3.data.notes"
-            placeholder="Hypotheses, 5-Why analysis, evidence links...">
+            </div>
+          </div>
+
+          <div class="phase d3">
+            <h3>D3 – Analysis</h3>
+            <textarea name="phases.D3.data.notes" placeholder="Hypotheses, 5-Why analysis, evidence links...">
           </textarea>
 
-        </div>
+          </div>
 
-        <div class="phase d4">
-          <h3>D4 – Corrective Actions</h3>
-          <textarea
-            name="phases.D4.data.notes"
-            placeholder="Corrective actions, owners, due dates...">
+          <div class="phase d4">
+            <h3>D4 – Corrective Actions</h3>
+            <textarea name="phases.D4.data.notes" placeholder="Corrective actions, owners, due dates...">
           </textarea>
 
-        </div>
+          </div>
 
-        <div class="phase d5">
-          <h3>D5 – Validation</h3>
-          <textarea
-           name="phases.D5.data.notes"
-           placeholder="Validation method, KPIs, results...">
+          <div class="phase d5">
+            <h3>D5 – Validation</h3>
+            <textarea name="phases.D5.data.notes" placeholder="Validation method, KPIs, results...">
           </textarea>
 
-        </div>
+          </div>
 
+        </div>
       </div>
-    </div>
 
-  </section>
+    </section>
 
-  <!-- ROW 2 -->
-  <section class="row bottom-row">
+    <!-- ROW 2 -->
+    <section class="row bottom-row">
 
-    <!-- RUN ANALYSIS -->
-    <div class="panel run-ai-panel">
-      <h3>Run Analysis</h3>
-      <p>Trigger AI-assisted reasoning based on the current incident and inputs.</p>
-      <button class="primary">Run AI Analysis</button>
-    </div>
+      <!-- RUN ANALYSIS -->
+      <div class="panel run-ai-panel">
+        <h3>Run Analysis</h3>
+        <p>Trigger AI-assisted reasoning based on the current incident and inputs.</p>
+        <button class="primary">Run AI Analysis</button>
+      </div>
 
-    <!-- AI INSIGHTS -->
-    <div class="panel ai-output">
-      <h3>AI-Assisted Insights</h3>
-      <p><strong>Hypothesis:</strong> Process parameter drift caused by delayed maintenance.</p>
-      <p><strong>Confidence:</strong> 0.72 (based on similar incidents)</p>
-      <ul>
-        <li>Recalibrate monitoring thresholds</li>
-        <li>Reduce maintenance interval</li>
-        <li>Introduce early warning alerts</li>
-      </ul>
-    </div>
+      <!-- AI INSIGHTS -->
+      <div class="panel ai-output">
+        <h3>AI-Assisted Insights</h3>
+        <p><strong>Hypothesis:</strong> Process parameter drift caused by delayed maintenance.</p>
+        <p><strong>Confidence:</strong> 0.72 (based on similar incidents)</p>
+        <ul>
+          <li>Recalibrate monitoring thresholds</li>
+          <li>Reduce maintenance interval</li>
+          <li>Introduce early warning alerts</li>
+        </ul>
+      </div>
 
-  </section>
+    </section>
 
-</main>
+  </main>
 
 </body>
+
 </html>
